Bug 451791 patch 1 - Remove write-only nsHTMLReflowState::mFlags::mHasClearance.  r=roc

This was introduced in bug 209694 (gecko-dev 13a65028) but became unused
through bug 292295 (gecko-dev 4593df2a57) and bug 300030 (gecko-dev
31f18988).